# shop

./: README.md  pyproject.toml
config/: settings.py  urls.py
home/: admin.py  models.py  tests.py  urls.py  views.py
home/migrations/: 0001_initial.py  0002_initial.py  0003_alter_category_parent.py  0004_product_image.py  0005_address.py  0006_rename_contact_address_address_address_city.py  0007_code_product_discount_order_code.py
media/fonts.googleapis.com/: css22d87.css
static/sinp/: 404.html  account.html  blog-grid-4-column.html  blog-grid-left-sidebar.html  blog-list-left-sidebar.html  blog-list-right-sidebar.html  blog-list.html  cart.html  checkout.html  index-3.html  index-4.html  index.html  login-register.html  shop-grid-3-column.html  shop-list-left-sidebar.html  shop-list.html  whishlist.html
templates/: about_us.html  account.html  base.html  footer.html  home.html  index.html  login.html  navbar.html  order.html  otp-verify.html  products.html  sign-up.html
templates/Mamad feshari/: about-us.html  blog-details.html  blog-grid-2-column.html  blog-grid-3-column.html  blog-grid-right-sidebar.html  compare.html  contact-us.html  faq.html  index-2.html  index.html  shop-grid-4-column.html  shop-grid-left-sidebar.html  shop-grid-right-sidebar.html  shop-list-right-sidebar.html  single-product-affiliate.html  single-product-configurable.html  single-product-group.html  single-product.html
user/: admin.py  manager.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_user_activate_alter_user_is_active.py  0008_user_account_type.py  (+6 more)
