[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["P014r-13 <811mohebi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
pillow = "^10.3.0"
django-jazzmin = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
